# PYGANTT_GUI

./: .gitignore  README.md  pygantt.py  pyganttgui.py  pyproject.toml
.vsode/: launch.json
scripts/: install-desktop.sh
src/pygantt/: app.py  custom_banners.txt  data.py  pygantt.desktop  pygantt.desktop.txt
