[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantt-retro"
version = "0.1.0"
description = "A retro terminal Gantt chart tool built with Python and Textual"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Remie Stronks" }]
dependencies = [
    "textual[syntax]>=0.58.0",
    "odfpy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/RemieS/PYGANTT_GUI"
Issues = "https://github.com/RemieS/PYGANTT_GUI/issues"

[tool.setuptools]
py-modules = ["pygantt", "data"]

[project.scripts]
pygantt = "pygantt:main"