[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygantt"
version = "0.1.0"
description = "Terminal-based Gantt chart tool with ASCII banners"
authors = [
    { name = "Remie Stronks" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual",
]

[project.scripts]
pygantt = "pygantt:main"

[tool.setuptools]
py-modules = ["pygantt"]

[tool.setuptools.package-data]
"" = ["custom_banners.txt"]

[tool.setuptools.exclude-package-data]
"" = ["__pycache__/*", "*.pyc"]
